# python-project-174

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pyci.yml
code/: Makefile  pyproject.toml
code/docs/: ERRORS.md
code/gendiff/: __init__.py  parser.py
code/gendiff/formatters/: __init__.py
code/gendiff/scripts/: gendiff.py
gendiff/: cli.py  differ.py  parser.py  tree.py
gendiff/formatters/: __init__.py  plain.py
gendiff/scripts/: gendiff.py
source/code/: README.md
source/code/gendiff/formatters/: stylish.py
source/code/gendiff/scripts/: gendiff.py
