[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
authors = [{name = "Hexlet team", email ="<team@hexlet.io>"}]
homepage = "https://hexlet.io"
readme="README.md"
requires-python = ">=3.13"
dependencies = [
    "hexlet-code",
]
[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff<=0.9.7",
]

[tool.uv.sources]
hexlet-code = { path = "code" }
