[project]
name = "hexlet-code"
version = "0.1.0"
description = "Compares two configuration files and shows a difference."
readme = "README.md"
license = "MIT"
authors = [{name = "Hexlet team", email ="team@hexlet.io"}]
requires-python = ">=3.10"

dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
gendiff = "gendiff.cli:main"  # Asegúrate que la función `main()` esté en `gendiff/cli.py`

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff<=0.9.7"
]